@@ -21,6 +21,7 @@ module ActiveMerchant #:nodoc:
     # * Elo
     # * Alelo
     # * Cabal
+    # * Naranja
     #
     # For testing purposes, use the 'bogus' credit card brand. This skips the vast majority of
     # validations, allowing you to focus on your core concerns until you're ready to be more concerned
@@ -94,6 +95,7 @@ module ActiveMerchant #:nodoc:
       # * +'elo'+
       # * +'alelo'+
       # * +'cabal'+
+      # * +'naranja'+
       #
       # Or, if you wish to test your implementation, +'bogus'+.
       #
